Correction version tablet

--- a/style.css
+++ b/style.css
@@ -492,7 +492,7 @@ h6{
         display: flex;
         flex-direction: column;
         flex-wrap: no-wrap;
-        height: 2200px;
+        height: 2500px;
         width: 100%;
         justify-content: space-around;
         align-content: center;
@@ -506,6 +506,10 @@ h6{
     }
    
     #container-all-hebergement{
+        border-radius: 0px;
+        width: 100%;
+    }
+    #container-all-activite{
         border-radius: 0px;
         width: 100%;
     }
